--- a/setting/settings.json
+++ b/setting/settings.json
@@ -1,12 +1,15 @@
 {
-    "connection_type": -4,
-    "selected_port": "",
+    "connection_type": -3,
+    "selected_port": "COM4",
     "print_if_weight_stable": true,
     "portions_printer": "Microsoft Print to PDF",
     "sum_printer": "Microsoft Print to PDF",
     "pallet_printer": "Microsoft Print to PDF",
-    "scale": 1,
+    "scale": 2,
     "ip": "127.0.0.1",
     "port": "12345",
-    "show_batch": false
+    "show_batch": true,
+    "protocol_ethernet": 0,
+    "protocol_com": 2,
+    "max_box_on_pallet": "28"
 }
